[package]
name = "urbit-monitor"
version = "0.0.1"
authors = ["~Sitsev-Lomrem <marknoexec@gmail.com>"]
edition = "2021"
description = "Performs simple health monitors on list of urbit ships."
repository = "https://github.com/riflechess/urbit-monitor"
license = "MIT"
keywords = ["urbit", "monitor", "health check"]

[dependencies]
urbit-http-api    = "0.7.3"
exitcode = "1.1.2"
system-config = "0.1.2"
serde = "1.0"
serde_yaml = "0.8"
yaml-rust = "0.4.4"
chrono = "0.4.19"
curl = "0.4.43"
linked-hash-map = "0.5.6"
